revision creds docker hub

--- a/billing/Jenkinsfile
+++ b/billing/Jenkinsfile
@@ -52,7 +52,7 @@ pipeline {
         stage('Push to Docker Hub') {
             steps {
                 withCredentials([usernamePassword(
-                    credentialsId: 'dockerhub-creds',
+                    credentialsId: 'dockerhub_creds',
                     usernameVariable: 'DOCKER_HUB_USER',
                     passwordVariable: 'DOCKER_HUB_PASS'
                 )]) {
