--- a/billing/Jenkinsfile
+++ b/billing/Jenkinsfile
@@ -58,7 +58,7 @@ pipeline {
                 )]) {
                     script {
                         bat "docker login -u ${env.DOCKER_HUB_USER} -p ${env.DOCKER_HUB_PASS}"
-                        docker.withRegistry('https://index.docker.io/v1/', 'dockerhub-creds') {
+                        docker.withRegistry('https://index.docker.io/v1/', 'dockerhub_creds') {
                             dockerImage.push("${env.PROJECT_VERSION}")
                             dockerImage.push("latest")
                         }
